--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="table-section">
             <textarea id="pasteArea" placeholder="Paste your Excel data here..."></textarea>
             <button id="pasteButton">Calculate Sales</button>
+            <button id="resetButton">Reset</button>
 
 <!-- Horizontal layout for the three sections -->
 <div class="horizontal-sections">
