--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
             <button id="pasteButton">Calculate Sales</button>
             <button id="resetButton">Reset</button>
 
+            <!-- Duplicate Total CGR Sales Section -->
+            <div class="duplicate-total-cgr-section">
+                <p class="duplicate-total-cgr-txt">
+                    Total CGR Sales: <span id="duplicateTotalCGR">0</span>
+                    <button id="copyButton" class="copy-button">Copy</button>
+                </p>
+                <div class="description">Copy the Total CGR Sales Number and click on Next Section.</div>
+            </div>
+
             <!-- Horizontal layout for the three sections -->
             <div class="horizontal-sections">
                 <div class="cgr-section">
