--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>CGR and Non-CGR Sales Calculator</h1>
 
         <div class="table-section">
-            <textarea id="pasteArea" placeholder="Paste your Excel data here..."></textarea>
+            <textarea id="pasteArea" placeholder="Paste your Infloww data here..."></textarea>
             <button id="pasteButton">Calculate Sales</button>
             <button id="resetButton">Reset</button>
 
