--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <div class="container">
         <h1>Calculate Your Chat Sales</h1>
+        <h3>Please enter all transactions since the START of your shift.</h3>
+        
 
         <div class="table-section">
             <textarea id="pasteArea" placeholder="Paste your Infloww data here..."></textarea>
